@@ -13,7 +13,8 @@ NEWS/ChangeLog for hydroPSO
         o 'plot_results'    : 'main' argument is now (internally) passed to the 'plot_out' function.
         o 'plot_particles'  : 'main' argument is now omitted for the 3D dotty plots ('plot_NparOF' function), in order to avoid confusing (and sometimes
                               unnecessary) titles when 'main' is too long
-
+        o 'lhoat'           : -) 'fn' argument now can be any R function or a character. In the latter case, it can be "hydromod" or the name of a 
+                                  valid R function. In previous versions of 'lhoat' only a character type was accepted (Thanks to Rui Esteves !)
 0.3-0	19-Dec-2012
         o 'hydroPSO'    : -) parallel capable (OS-independent)
                              * new argument 'parallel' to define how to parallelise the evaluation of the objective function
